# docs/openapi.yml
@@ -5980,7 +5980,47 @@ paths:
           description: Successful response
           content:
             application/json: {}
-
+  /credentials/verifications:
+    parameters:
+      - name: Current-Identity
+        in: header
+        schema:
+          type: string
+        example: ebd02a72-f530-4d18-9a72-d7aa9ace1271
+    post:
+      tags:
+        - credentials
+      summary: request verification
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json: {}
+  /credentials/verifications/{id}:
+    parameters:
+      - name: Current-Identity
+        in: header
+        schema:
+          type: string
+        example: ebd02a72-f530-4d18-9a72-d7aa9ace1271
+      - name: id
+        in: path
+        schema:
+          type: string
+        required: true
+    get:
+      tags:
+        - credentials
+      summary: get verification status
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json: {}
   /credentials/experiences:
     parameters:
       - name: Current-Identity
